--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ header {
    display: flex;
    align-items: center;
    justify-content: space-around;
-   position: fixed;
+   position: absolute;
 }
 
 a{
